samples/_failures_safe/1761710150_69a9fd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cbba8c1f.c: In function ‘main’:
./samples/SAFE/__tmp_cbba8c1f.c:172:5: error: expected declaration or statement at end of input
  172 |     for (int k = 0; k < token_count; k++) {
      |     ^~~
./samples/SAFE/__tmp_cbba8c1f.c:172:5: error: expected declaration or statement at end of input
